--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         header {
             text-align: center;
             padding: 50px 20px;
-            background: linear-gradient(45deg, #706182, #fc9ca7);
+            background: linear-gradient(45deg, rgba(112, 97, 130, 0.8), rgba(72, 142, 92, 1)), url('imagenes/patron-header.png'); /* Fondo con degradado y patrón */
+            background-size: cover; /* Ajusta el tamaño de la imagen */
+            background-repeat: repeat; /* Repite la imagen si es un patrón */
             margin-bottom: 0;
+            position: relative; /* Para posicionar el título correctamente */
         }
 
         h1 {
@@ -33,6 +36,8 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
             animation: fadeIn 2s ease-in-out;
             margin: 0;
+            position: relative; /* Asegura que el título esté por encima del fondo */
+            z-index: 1; /* Coloca el título por encima de la imagen de fondo */
         }
 
         h2 {
@@ -45,16 +50,8 @@
         h3 {
             font-size: 1.5rem;
             color: #706182;
-            margin-bottom: 10px; /* Espacio debajo del título */
-        }
-
-        .separator {
-            width: 100%;
-            height: 50px;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23706182" fill-opacity="1" d="M0,160L48,149.3C96,139,192,117,288,128C384,139,480,181,576,181.3C672,181,768,139,864,128C960,117,1056,139,1152,149.3C1248,160,1344,160,1392,160L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>');
-            background-size: cover;
-            background-position: center;
-            margin: 0;
+            margin-top: 10px;
+            margin-bottom: 10px;
         }
 
         .book-container {
@@ -83,6 +80,9 @@
         .book-description {
             margin: 20px 0;
             color: #555;
+            text-align: justify;
+            max-width: 300px;
+            font-size: 14px;
         }
 
         .buy-button {
@@ -110,22 +110,20 @@
         <h2>Mis Libros</h2>
         <div class="book-container">
             <div class="book">
-                <h3>Y si no, nos hubiéramos conocido por casualidad</h3> <!-- Título encima de la portada -->
+                <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
                 <img src="imagenes/portada1.jpg" alt="Portada Libro 1" class="book-cover">
-                <p class="book-description">Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito, no salen como siempre había imaginado.
-
-                    Por otro lado, Richi regresa a Madrid después de unos meses trabajando en el extranjero, aún dolido por la ruptura con su ex. Su vida es lo más aburrida y sencilla.
-                    
-                    Sus mundos, aparentemente incompatibles, chocan con una fuerza irresistible, marcada por el sexo, la lujuria y los miedos. Sin embargo, el orgullo de cada uno podría ser su perdición, llevándolos a tomar decisiones equivocadas, y algunas muy equivocadas.</p>
+                <p class="book-description">Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito no salen como siempre había imaginado...</p>
                 <a href="https://www.amazon.es/nos-hubi%C3%A9ramos-conocido-por-casualidad/dp/B0DK9RJF91/ref=tmm_pap_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.wL-4zrVh7fIWG9fmxfY1TGbo8h1twGqKOHnvghktFZ-T5m7uzfybc1tJmRkylc8vQLsJ2wMbjMogJuAryWMRGpG3n_6GSIpRb5SsSs1h0MkoMK3ZkgZAjrRkNJ1qeuwKlqbvYT9qz0JXfKVxQHKgWGdipbht_1hARllueLnXieB8_lrvym1e77_5XDVDg27phMTCrBMlblPkyJqJMZ0BeETk0w112ReWT9_d9FpsFf84KCLCGueqnRvBySeOS-_PhVJPsP-qPgrDUStJmyWjnijqEEAZjPTQHh6nECx5Kco6TAPmZrlfenrK8eUiqncxW3SRv9x1D1QzzxMrAIauBnQHMge6DAXNapY_4SttpBWxy8i9xWDDLf5T7QxT0VbUZpVYbqnfJvfY6HKuUogmc6PQ85p5Cw8oHqCXKN2uO5_mmvulKLaO0IiRUZky_WQq.68_68KZCDsMvl4JfOHO3_gI33NU6IEb5A4_cYm5TXDE&qid=1740473618&sr=8-1" target="_blank" class="buy-button">Compra ahora</a>
             </div>
             <div class="book">
-                <h3>¿Y si, volviéramos a vernos por Casualidad?</h3> <!-- Título encima de la portada -->
+                <h3>¿Y si volviéramos a vernos por casualidad?</h3>
                 <img src="imagenes/portada2.jpg" alt="Portada Libro 2" class="book-cover">
-                <p class="book-description">Vicky nunca imaginó que construiría una vida con Tae y Aera a su lado, casi perfecta, cercana a lo que muchos consideran una familia modelo, en Corea del Sur. Por otro lado, Richi, aunque continúa siendo un modelo de éxito, se encuentra en una situación completamente distinta: ya no está solo; después de varios años comparte su vida con alguien. Y también esconde un vacío que ni la fama ni la compañía pueden llenar. ¿Y si, se volvieran a ver por casualidad...? ¿O si, simplemente es algo que se llama destino?</p>
+                <p class="book-description">Vicky nunca imaginó que construiría una vida con Tae y Aera a su lado, casi perfecta, cercana a lo que muchos consideran una familia modelo, en Corea del Sur...</p>
                 <a href="https://www.amazon.es/volvi%C3%A9ramos-Casualidad-hubi%C3%A9ramos-conocido-casualidad/dp/B0DTGB4S33/ref=tmm_pap_swatch_0" target="_blank" class="buy-button">Compra ahora</a>
             </div>
         </div>
     </section>
+</body>
+</html>
 </body>
 </html>
