--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         header {
             text-align: center;
             padding: 50px 20px;
-            background: linear-gradient(45deg, rgba(112, 97, 130, 0.8), rgba(72, 142, 92, 1)), url('imagenes/patron-header.png'); /* Fondo con degradado y patrón */
+            background: linear-gradient(45deg, rgba(112, 97, 130, 0.8), rgba(72, 142, 92, 0.8)), url('imagenes/patron-header.png'); /* Fondo con degradado y patrón */
             background-size: cover; /* Ajusta el tamaño de la imagen */
             background-repeat: repeat; /* Repite la imagen si es un patrón */
             margin-bottom: 0;
@@ -87,7 +87,7 @@
 
         .buy-button {
             display: inline-block;
-            background-color: #fc9ca7;
+            background-color: #fc9ca7; /* Color rosa pastel (sin cambios) */
             color: #ffffff;
             padding: 10px 20px;
             text-decoration: none;
@@ -96,7 +96,7 @@
         }
 
         .buy-button:hover {
-            background-color: #706182;
+            background-color: #706182; /* Color morado al hacer hover (sin cambios) */
             color: #fc9ca7;
         }
     </style>
@@ -113,7 +113,7 @@
                 <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
                 <img src="imagenes/portada1.jpg" alt="Portada Libro 1" class="book-cover">
                 <p class="book-description">Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito no salen como siempre había imaginado...</p>
-                <a href="https://www.amazon.es/nos-hubi%C3%A9ramos-conocido-por-casualidad/dp/B0DK9RJF91/ref=tmm_pap_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.wL-4zrVh7fIWG9fmxfY1TGbo8h1twGqKOHnvghktFZ-T5m7uzfybc1tJmRkylc8vQLsJ2wMbjMogJuAryWMRGpG3n_6GSIpRb5SsSs1h0MkoMK3ZkgZAjrRkNJ1qeuwKlqbvYT9qz0JXfKVxQHKgWGdipbht_1hARllueLnXieB8_lrvym1e77_5XDVDg27phMTCrBMlblPkyJqJMZ0BeETk0w112ReWT9_d9FpsFf84KCLCGueqnRvBySeOS-_PhVJPsP-qPgrDUStJmyWjnijqEEAZjPTQHh6nECx5Kco6TAPmZrlfenrK8eUiqncxW3SRv9x1D1QzzxMrAIauBnQHMge6DAXNapY_4SttpBWxy8i9xWDDLf5T7QxT0VbUZpVYbqnfJvfY6HKuUogmc6PQ85p5Cw8oHqCXKN2uO5_mmvulKLaO0IiRUZky_WQq.68_68KZCDsMvl4JfOHO3_gI33NU6IEb5A4_cYm5TXDE&qid=1740473618&sr=8-1" target="_blank" class="buy-button">Compra ahora</a>
+                <a href="https://www.amazon.es/nos-hubi%C3%A9ramos-conocido-por-casualidad/dp/B0DK9RJF91/ref=tmm_pap_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.wL-4zrVh7fIWG9fmxfY1TGbo8h1twGqKOHnvghktFZ-T5m7uzfybc1tJmRkylc8vQLsJ2wMbjMogJuAryWMRGpG3n_6GSIpRb5SsSs1h0MkoMK3ZkgZAjrRkNJ1qeuwKlqbvYT9qz0JXfKVxQHKgWGdipbht_1hARllueLnXieB8_lrvym1e77_5XDVDg27phMTCrBMlblPkyJqJMZ0BeETk0w112ReWT9_d9FpsFf84KCLCGueqnRvBySeOS-_PhVJPsP-qPgrDUStJmyWjnijqEEAZjPTQHh6nECx5Kco6TAPmZrlfenrK8eUiqncxW3SRv9x1D1QzzxMrAIauBnQHMge6DAXNapY_4SttpBWxy8i9xWDDLf5T7QxT0VbUZpVYbqnfJvfY6HKuUogmc6PQ85p5Cw8oHqCXKN2uO5_mmvulKLaO0IiRUZky_WQq.68_68KZCDsMvl4JfOHO3_gI33NU6IEb5A4_cYm5TXDE&qid=1740473618&sr=8-11" target="_blank" class="buy-button">Compra ahora</a>
             </div>
             <div class="book">
                 <h3>¿Y si volviéramos a vernos por casualidad?</h3>
@@ -123,7 +123,5 @@
             </div>
         </div>
     </section>
-</body>
-</html>
 </body>
 </html>
