--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de [Tu Nombre]</title>
     <style>
-        /* Animación de fade-in */
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
         /* Estilos generales */
         body {
             font-family: Arial, sans-serif;
@@ -23,21 +17,15 @@
         header {
             text-align: center;
             padding: 50px 20px;
-            background: linear-gradient(45deg, rgba(112, 97, 130, 0.8), rgba(72, 142, 92, 0.8)), url('imagenes/patron-header.png'); /* Fondo con degradado y patrón */
-            background-size: cover; /* Ajusta el tamaño de la imagen */
-            background-repeat: repeat; /* Repite la imagen si es un patrón */
+            background: linear-gradient(45deg, #706182, #fc9ca7);
             margin-bottom: 0;
-            position: relative; /* Para posicionar el título correctamente */
         }
 
         h1 {
             font-size: 3rem;
             color: #ffffff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-            animation: fadeIn 2s ease-in-out;
             margin: 0;
-            position: relative; /* Asegura que el título esté por encima del fondo */
-            z-index: 1; /* Coloca el título por encima de la imagen de fondo */
         }
 
         h2 {
@@ -82,12 +70,11 @@
             color: #555;
             text-align: justify;
             max-width: 300px;
-            font-size: 14px;
         }
 
         .buy-button {
             display: inline-block;
-            background-color: #fc9ca7; /* Color rosa pastel (sin cambios) */
+            background-color: #fc9ca7;
             color: #ffffff;
             padding: 10px 20px;
             text-decoration: none;
@@ -96,7 +83,7 @@
         }
 
         .buy-button:hover {
-            background-color: #706182; /* Color morado al hacer hover (sin cambios) */
+            background-color: #706182;
             color: #fc9ca7;
         }
     </style>
@@ -113,7 +100,7 @@
                 <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
                 <img src="imagenes/portada1.jpg" alt="Portada Libro 1" class="book-cover">
                 <p class="book-description">Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito no salen como siempre había imaginado...</p>
-                <a href="https://www.amazon.es/nos-hubi%C3%A9ramos-conocido-por-casualidad/dp/B0DK9RJF91/ref=tmm_pap_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.wL-4zrVh7fIWG9fmxfY1TGbo8h1twGqKOHnvghktFZ-T5m7uzfybc1tJmRkylc8vQLsJ2wMbjMogJuAryWMRGpG3n_6GSIpRb5SsSs1h0MkoMK3ZkgZAjrRkNJ1qeuwKlqbvYT9qz0JXfKVxQHKgWGdipbht_1hARllueLnXieB8_lrvym1e77_5XDVDg27phMTCrBMlblPkyJqJMZ0BeETk0w112ReWT9_d9FpsFf84KCLCGueqnRvBySeOS-_PhVJPsP-qPgrDUStJmyWjnijqEEAZjPTQHh6nECx5Kco6TAPmZrlfenrK8eUiqncxW3SRv9x1D1QzzxMrAIauBnQHMge6DAXNapY_4SttpBWxy8i9xWDDLf5T7QxT0VbUZpVYbqnfJvfY6HKuUogmc6PQ85p5Cw8oHqCXKN2uO5_mmvulKLaO0IiRUZky_WQq.68_68KZCDsMvl4JfOHO3_gI33NU6IEb5A4_cYm5TXDE&qid=1740473618&sr=8-11" target="_blank" class="buy-button">Compra ahora</a>
+                <a href="https://www.amazon.es/nos-hubi%C3%A9ramos-conocido-por-casualidad/dp/B0DK9RJF91" target="_blank" class="buy-button">Compra ahora</a>
             </div>
             <div class="book">
                 <h3>¿Y si volviéramos a vernos por casualidad?</h3>
