--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
             margin-bottom: 10px;
         }
 
+        .separator {
+            width: 100%;
+            height: 10px; /* Reducido en un 80% (de 50px a 10px) */
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23706182" fill-opacity="0.8" d="M0,160L48,149.3C96,139,192,117,288,128C384,139,480,181,576,181.3C672,181,768,139,864,128C960,117,1056,139,1152,149.3C1248,160,1344,160,1392,160L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>');
+            background-size: cover;
+            background-position: center;
+            margin: 0;
+        }
+
         .book-container {
             display: flex;
             justify-content: center;
