--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de [Tu Nombre]</title>
+    <!-- Etiquetas meta para SEO -->
+    <title>Página de Ana Carolina - Autora de Seduccion</title>
+    <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de Seduccion. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
+    <meta name="keywords" content="libros, literatura, Ana Carolina, Seduccion, autor, escritora, Instagram, comprar libros">
+    <meta name="author" content="Ana Carolina">
+    <!-- Open Graph y Twitter Card -->
+    <meta property="og:title" content="Página de Ana Carolina - Autora de Seduccion">
+    <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seduccion. Descubre sus libros, historias y más.">
+    <meta property="og:image" content="https://tudominio.com/imagenes/portada1.jpg">
+    <meta property="og:url" content="https://tudominio.com">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Página de Ana Carolina - Autora de Seduccion">
+    <meta name="twitter:description" content="Explora el mundo literario de Ana Carolina, autora de Seduccion. Descubre sus libros, historias y más.">
+    <meta name="twitter:image" content="https://tudominio.com/imagenes/portada1.jpg">
+    <!-- Enlace a FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Estilos CSS -->
     <style>
         /* Estilos generales */
         body {
@@ -18,78 +35,98 @@
             text-align: center;
             padding: 50px 20px;
             background: linear-gradient(45deg, #706182, #fc9ca7);
-            margin-bottom: 0;
-            background-image: url('imagenes/patron-header.png'); /* Ruta al archivo PNG de las flores */
-            background-size: cover; /* Ajusta el tamaño del patrón */
-            background-repeat: no-repeat; /* Evita que el patrón se repita */
-            background-position: center; /* Centra el patrón */
-            opacity: 0.8; /* Reduce la transparencia */
+            position: relative;
+            overflow: hidden;
+        }
+
+        .header-pattern {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('imagenes/patron-header.png');
+            background-size: cover;
+            background-position: center;
+            opacity: 0.3;
+            z-index: 1;
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 2.5rem;
             color: #ffffff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
             margin: 0;
+            position: relative;
+            z-index: 2;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(-20px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
 
         h2 {
-            font-size: 2rem;
+            font-size: 1.8rem;
             color: #706182;
             text-align: center;
-            margin-top: 40px;
+            margin-top: 30px;
         }
 
         h3 {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
             color: #706182;
-            margin-top: 10px;
-            margin-bottom: 10px;
+            margin: 10px 0;
         }
 
         .separator {
             width: 100%;
-            height: 10px; /* Altura reducida */
-            background-color: #fc9ca7; /* Color sólido para el separador */
+            height: auto;
+            display: block;
         }
 
         .book-container {
             display: flex;
             justify-content: center;
-            gap: 40px;
+            gap: 20px;
             flex-wrap: wrap;
-            padding: 20px;
+            padding: 10px;
         }
 
         .book {
             text-align: center;
-            max-width: 300px;
+            max-width: 250px;
         }
 
         .book-cover {
             width: 100%;
-            max-width: 200px;
-            transition: transform 0.3s ease;
+            max-width: 150px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
         }
 
         .book-cover:hover {
             transform: scale(1.1);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         }
 
         .book-description {
-            margin: 20px 0;
+            margin: 10px 0;
             color: #555;
             text-align: justify;
-            max-width: 300px;
+            font-size: 0.9rem;
         }
 
         .buy-button {
             display: inline-block;
             background-color: #fc9ca7;
             color: #ffffff;
-            padding: 10px 20px;
+            padding: 8px 16px;
             text-decoration: none;
             border-radius: 5px;
+            font-size: 0.9rem;
             transition: background-color 0.3s ease;
         }
 
@@ -97,29 +134,58 @@
             background-color: #706182;
             color: #fc9ca7;
         }
+
+        .instagram-button {
+            display: inline-flex;
+            align-items: center;
+            background-color: #e1306c;
+            color: #ffffff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        .instagram-button:hover {
+            background-color: #c13584;
+        }
+
+        .instagram-button i {
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
     <header>
+        <div class="header-pattern"></div>
         <h1>Bienvenidos a mi mundo literario</h1>
     </header>
-    <div class="separator"></div>
+    <img src="imagenes/separador.png" alt="Separador decorativo" class="separator">
     <section>
         <h2>Mis Libros</h2>
         <div class="book-container">
             <div class="book">
                 <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
-                <img src="imagenes/portada1.jpg" alt="Portada Libro 1" class="book-cover">
+                <img src="imagenes/portada1.jpg" alt="Portada del libro ¿Y si no, nos hubiéramos conocido por casualidad?" class="book-cover">
                 <p class="book-description">Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito no salen como siempre había imaginado...</p>
                 <a href="https://www.amazon.es/nos-hubi%C3%A9ramos-conocido-por-casualidad/dp/B0DK9RJF91" target="_blank" class="buy-button">Compra ahora</a>
             </div>
             <div class="book">
                 <h3>¿Y si volviéramos a vernos por casualidad?</h3>
-                <img src="imagenes/portada2.jpg" alt="Portada Libro 2" class="book-cover">
+                <img src="imagenes/portada2.jpg" alt="Portada del libro ¿Y si volviéramos a vernos por casualidad?" class="book-cover">
                 <p class="book-description">Vicky nunca imaginó que construiría una vida con Tae y Aera a su lado, casi perfecta, cercana a lo que muchos consideran una familia modelo, en Corea del Sur...</p>
                 <a href="https://www.amazon.es/volvi%C3%A9ramos-Casualidad-hubi%C3%A9ramos-conocido-casualidad/dp/B0DTGB4S33/ref=tmm_pap_swatch_0" target="_blank" class="buy-button">Compra ahora</a>
             </div>
         </div>
+        <div style="text-align: center; margin-top: 30px;">
+            <a href="https://www.instagram.com/tuperfil" target="_blank" class="instagram-button">
+                <i class="fab fa-instagram"></i> ¡Sígueme en Instagram!
+            </a>
+        </div>
     </section>
+</body>
+</html>
 </body>
 </html>
