--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Etiquetas meta para SEO -->
-    <title>Página de Ana Carolina - Autora de Seduccion</title>
-    <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de Seduccion. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
-    <meta name="keywords" content="libros, literatura, Ana Carolina, Seduccion, autor, escritora, Instagram, comprar libros">
+    <title>Página de Ana Carolina - Autora de Seducción</title>
+    <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
+    <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros">
     <meta name="author" content="Ana Carolina">
     <!-- Open Graph y Twitter Card -->
-    <meta property="og:title" content="Página de Ana Carolina - Autora de Seduccion">
-    <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seduccion. Descubre sus libros, historias y más.">
+    <meta property="og:title" content="Página de Ana Carolina - Autora de Seducción">
+    <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
     <meta property="og:image" content="https://tudominio.com/imagenes/portada1.jpg">
     <meta property="og:url" content="https://tudominio.com">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Página de Ana Carolina - Autora de Seduccion">
-    <meta name="twitter:description" content="Explora el mundo literario de Ana Carolina, autora de Seduccion. Descubre sus libros, historias y más.">
+    <meta name="twitter:title" content="Página de Ana Carolina - Autora de Seducción">
+    <meta name="twitter:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
     <meta name="twitter:image" content="https://tudominio.com/imagenes/portada1.jpg">
     <!-- Enlace a FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
