--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             width: 100%;
             height: 100%;
             background-image: url('imagenes/patron-header.png');
-            background-size: cover;
-            background-position: center;
+            background-size: cover; /* Cubrir todo el espacio */
+            background-position: center; /* Centrar la imagen */
             opacity: 0.3;
             z-index: 1;
         }
