--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             background: linear-gradient(45deg, #706182, #fc9ca7);
             position: relative;
             overflow: hidden;
+            border: 2px solid red; /* Solo para debugging */
         }
 
         .header-pattern {
@@ -45,7 +46,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('imagenes/patron-header.png');
+            background-image: url('/ruta/completa/a/imagenes/patron-header.png?v=1'); /* Ruta absoluta y parámetro único */
             background-size: cover; /* Cubrir todo el espacio */
             background-position: center; /* Centrar la imagen */
             opacity: 0.3;
@@ -160,30 +161,4 @@
 <body>
     <header>
         <div class="header-pattern"></div>
-        <h1>Bienvenidos a mi mundo literario</h1>
-    </header>
-    <img src="imagenes/separador.png" alt="Separador decorativo" class="separator">
-    <section>
-        <h2>Mis Libros</h2>
-        <div class="book-container">
-            <div class="book">
-                <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
-                <img src="imagenes/portada1.jpg" alt="Portada del libro ¿Y si no, nos hubiéramos conocido por casualidad?" class="book-cover">
-                <p class="book-description">Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito no salen como siempre había imaginado...</p>
-                <a href="https://www.amazon.es/nos-hubi%C3%A9ramos-conocido-por-casualidad/dp/B0DK9RJF91" target="_blank" class="buy-button">Compra ahora</a>
-            </div>
-            <div class="book">
-                <h3>¿Y si volviéramos a vernos por casualidad?</h3>
-                <img src="imagenes/portada2.jpg" alt="Portada del libro ¿Y si volviéramos a vernos por casualidad?" class="book-cover">
-                <p class="book-description">Vicky nunca imaginó que construiría una vida con Tae y Aera a su lado, casi perfecta, cercana a lo que muchos consideran una familia modelo, en Corea del Sur...</p>
-                <a href="https://www.amazon.es/volvi%C3%A9ramos-Casualidad-hubi%C3%A9ramos-conocido-casualidad/dp/B0DTGB4S33/ref=tmm_pap_swatch_0" target="_blank" class="buy-button">Compra ahora</a>
-            </div>
-        </div>
-        <div style="text-align: center; margin-top: 30px;">
-            <a href="https://www.instagram.com/tuperfil" target="_blank" class="instagram-button">
-                <i class="fab fa-instagram"></i> ¡Sígueme en Instagram!
-            </a>
-        </div>
-    </section>
-</body>
-</html>
+       
