--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Etiquetas meta para SEO -->
-    <title>Página de Ana Carolina - Autora de Seduccion</title>
-    <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
+    <title>Página de Ana Carolina - Autora de Seducción</title>
+    <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de Seduccion. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
     <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros">
     <meta name="author" content="Ana Carolina">
     <!-- Open Graph y Twitter Card -->
@@ -45,9 +45,9 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('imagenes/patron-header.png');
-            background-size: cover;
-            background-position: center;
+            background-image: url('/ruta/completa/a/imagenes/patron-header.png'); /* Ruta absoluta */
+            background-size: cover; /* Cubrir todo el espacio */
+            background-position: center; /* Centrar la imagen */
             opacity: 0.3;
             z-index: 1;
         }
@@ -162,19 +162,19 @@
         <div class="header-pattern"></div>
         <h1>Bienvenidos a mi mundo literario</h1>
     </header>
-    <img src="imagenes/separador.png" alt="Separador decorativo" class="separator">
+    <img src="/ruta/completa/a/imagenes/separador.png" alt="Separador decorativo" class="separator">
     <section>
         <h2>Mis Libros</h2>
         <div class="book-container">
             <div class="book">
                 <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
-                <img src="imagenes/portada1.jpg" alt="Portada del libro ¿Y si no, nos hubiéramos conocido por casualidad?" class="book-cover">
+                <img src="/ruta/completa/a/imagenes/portada1.jpg" alt="Portada del libro ¿Y si no, nos hubiéramos conocido por casualidad?" class="book-cover">
                 <p class="book-description">Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito no salen como siempre había imaginado...</p>
                 <a href="https://www.amazon.es/nos-hubi%C3%A9ramos-conocido-por-casualidad/dp/B0DK9RJF91" target="_blank" class="buy-button">Compra ahora</a>
             </div>
             <div class="book">
                 <h3>¿Y si volviéramos a vernos por casualidad?</h3>
-                <img src="imagenes/portada2.jpg" alt="Portada del libro ¿Y si volviéramos a vernos por casualidad?" class="book-cover">
+                <img src="/ruta/completa/a/imagenes/portada2.jpg" alt="Portada del libro ¿Y si volviéramos a vernos por casualidad?" class="book-cover">
                 <p class="book-description">Vicky nunca imaginó que construiría una vida con Tae y Aera a su lado, casi perfecta, cercana a lo que muchos consideran una familia modelo, en Corea del Sur...</p>
                 <a href="https://www.amazon.es/volvi%C3%A9ramos-Casualidad-hubi%C3%A9ramos-conocido-casualidad/dp/B0DTGB4S33/ref=tmm_pap_swatch_0" target="_blank" class="buy-button">Compra ahora</a>
             </div>
