--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Open Graph y Twitter Card -->
     <meta property="og:title" content="Página de Ana Carolina - Autora de Seducción">
     <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
-    <meta property="og:image" content="imagenes/portada2.jpg">
-    <meta property="og:url" content="https://tudominio.com">
+    <meta property="og:image" content="https://kampa01.github.io/mislibros/imagenes/portada2.jpg">
+    <meta property="og:url" content="https://kampa01.github.io/mislibros/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Página de Ana Carolina - Autora de Seducción">
