--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Página de Ana Carolina - Autora de Seducción">
     <meta name="twitter:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
-    <meta name="twitter:image" content="https://tudominio.com/imagenes/portada1.jpg">
+    <meta name="twitter:image" content="https://kampa01.github.io/mislibros/imagenes/portada1.jpg">
     <!-- Enlace a FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Enlace al archivo CSS externo -->
