--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Open Graph y Twitter Card -->
     <meta property="og:title" content="Página de Ana Carolina - Autora de Seducción">
     <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
-    <meta property="og:image" content="https:/escritoraaanacarolina.com/mislibros/imagenes/portada2.jpg">
+    <meta property="og:image" content="https:/escritoraanacarolina.com/mislibros/imagenes/portada2.jpg">
     <meta property="og:url" content="https:/escritoraaanacarolina.com/mislibros/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
