--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Etiquetas meta para SEO -->
     <title>Página de Ana Carolina - Autora de Seducción</title>
-    <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
+    <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de romances eroticos. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
     <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros">
     <meta name="author" content="Ana Carolina">
     <!-- Open Graph y Twitter Card -->
-    <meta property="og:title" content="Página de Ana Carolina - Autora de Seducción">
+    <meta property="og:title" content="Página de Ana Carolina - Autora de romances eroticos">
     <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
     <meta property="og:image" content="https:/escritoraanacarolina.com/mislibros/imagenes/portada2.jpg">
     <meta property="og:url" content="https:/escritoraaanacarolina.com/mislibros/">
