--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Open Graph y Twitter Card -->
     <meta property="og:title" content="Página de Ana Carolina - Autora de romances eroticos">
     <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
-    <meta property="og:image" content="https:/escritoraanacarolina.com/mislibros/imagenes/portada2.jpg">
-    <meta property="og:url" content="https:/escritoraaanacarolina.com/mislibros/">
+    <meta property="og:image" content="https:/escritoraanacarolina.com/imagenes/portada2.jpg">
+    <meta property="og:url" content="https:/escritoraaanacarolina.com/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Página de Ana Carolina - Autora de romances eroticos">
