--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Etiquetas meta para SEO -->
-    <title>Página de Ana Carolina - Autora de romances eroticos/title>
+    <title>Página de Ana Carolina - Autora de romances eroticos</title>
     <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de romances eroticos. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
     <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros">
     <meta name="author" content="Ana Carolina">
