--- a/index.html
+++ b/index.html
@@ -53,5 +53,43 @@
             </a>
         </div>
     </section>
+
+    <!-- Sección Bookstagrammer -->
+<section id="Bookstagrammer">
+    <h2>Bookstagrammer</h2>
+    <div class="Bookstagrammer-container">
+        <!-- Colaborador 1 -->
+        <div class="booksgramer">
+            <img src="imagenes/enerojs.jpg" alt="Foto de perfil de Booksgramer 1">
+            <a href="https://www.instagram.com/enero.gs/" target="_blank" class="instagram-button">
+                <i class="fab fa-instagram"></i> <!-- Icono de Instagram -->
+            </a>
+        </div>
+        <!-- Colaborador 2 -->
+        <div class="booksgramer">
+            <img src="imagenes/panditalectora.jpg" alt="Foto de perfil de Booksgramer 2">
+            <a href="https://www.instagram.com/pandita.lectora" target="_blank" class="instagram-button">
+                <i class="fab fa-instagram"></i> <!-- Icono de Instagram -->
+            </a>
+        </div>
+        <!-- Colaborador 3 -->
+        <div class="booksgramer">
+            <img src="imagenes/pame.jpg" alt="Foto de perfil de Booksgramer 3">
+            <a href="https://www.instagram.com/fpamelagarcia" target="_blank" class="instagram-button">
+                <i class="fab fa-instagram"></i> <!-- Icono de Instagram -->
+            </a>
+        </div>
+        <!-- Colaborador 4 -->
+        <div class="booksgramer">
+            <img src="imagenes/isacat7.jpg" alt="Foto de perfil de Booksgramer 4">
+            <a href="https://www.instagram.com/isacat7" target="_blank" class="instagram-button">
+                <i class="fab fa-instagram"></i> <!-- Icono de Instagram -->
+            </a>
+        </div>
+        <!-- Puedes añadir más colaboradores aquí -->
+    </div>
+</section>
+    </div>
+</section>
 </body>
 </html>
