--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Etiquetas meta para SEO -->
     <title>Página de Ana Carolina - Autora de romances eroticos</title>
     <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de romances eroticos. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
-    <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros">
+    <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros, romance, erotico, romance erotico">
     <meta name="author" content="Ana Carolina">
     <!-- Open Graph y Twitter Card -->
     <meta property="og:title" content="Página de Ana Carolina - Autora de romances eroticos">
