--- a/index.html
+++ b/index.html
@@ -1,94 +1,140 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Etiquetas meta para SEO -->
-    <title>Página de Ana Carolina - Autora de romances eroticos</title>
-    <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de romances eroticos. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
-    <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros, romance, erotico, romance erotico">
-    <meta name="author" content="Ana Carolina">
-    <!-- Open Graph y Twitter Card -->
-    <meta property="og:title" content="Página de Ana Carolina - Autora de romances eroticos">
-    <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
-    <meta property="og:image" content="https://escritoraanacarolina.com/imagenes/portada2.jpg">
-    <meta property="og:url" content="https://escritoraanacarolina.com/">
-    <meta property="og:type" content="website">
-    <meta name="twitter:title" content="Página de Ana Carolina - Autora de romances eroticos">
-    <meta name="twitter:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
-    <meta name="twitter:image" content="https://escritoraanacarolina.com/imagenes/portada1.jpg">
-    <!-- Enlace a FontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- Enlace al archivo CSS externo -->
-    <link rel="stylesheet" href="estilos.css">
-    <!-- Favicon -->
-    <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página de Ana Carolina - Autora de romances eroticos</title>
+  <meta name="description" content="Explora el mundo literario de Ana Carolina, autora de romances eroticos. Descubre sus libros, historias y más. ¡Sígueme en Instagram para estar al día!">
+  <meta name="keywords" content="libros, literatura, Ana Carolina, Seducción, autor, escritora, Instagram, comprar libros">
+  <meta name="author" content="Ana Carolina">
+  <!-- Open Graph y Twitter Card -->
+  <meta property="og:title" content="Página de Ana Carolina - Autora de romances eroticos">
+  <meta property="og:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
+  <meta property="og:image" content="https://escritoraanacarolina.com/imagenes/portada2.jpg">
+  <meta property="og:url" content="https://escritoraanacarolina.com/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Página de Ana Carolina - Autora de romances eroticos">
+  <meta name="twitter:description" content="Explora el mundo literario de Ana Carolina, autora de Seducción. Descubre sus libros, historias y más.">
+  <meta name="twitter:image" content="https://escritoraanacarolina.com/mislibros/imagenes/portada1.jpg">
+  <!-- Enlace a FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <!-- Enlace al archivo CSS externo -->
+  <link rel="stylesheet" href="estilos.css">
+  <!-- Favicon -->
+  <link rel="icon" href="imagenes/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="header-pattern"></div>
-        <h1>Bienvenidos a mi mundo literario</h1>
-    </header>
-    <img src="imagenes/separador.png" alt="Separador decorativo" class="separator">
-    <section>
-        <h2>Mis Libros</h2>
-        <div class="book-container">
-            <div class="book">
-                <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
-                <img src="imagenes/portada1.jpg" alt="Portada del libro '¿Y si no, nos hubiéramos conocido por casualidad?'" class="book-cover">
-                <p class="book-description">Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito no salen como siempre había imaginado...</p>
-                <a href="https://www.amazon.es/nos-hubiéramos-conocido-por-casualidad/dp/B0DK9RJF91" target="_blank" class="buy-button">Compra ahora</a>
-            </div>
-            <div class="book">
-                <h3>¿Y si volviéramos a vernos por casualidad?</h3>
-                <img src="imagenes/portada2.jpg" alt="Portada del libro '¿Y si volviéramos a vernos por casualidad?'" class="book-cover">
-                <p class="book-description">Vicky nunca imaginó que construiría una vida con Tae y Aera a su lado, casi perfecta, cercana a lo que muchos consideran una familia modelo, en Corea del Sur...</p>
-                <a href="https://www.amazon.es/volviéramos-Casualidad-hubiéramos-conocido-casualidad/dp/B0DTGB4S33" target="_blank" class="buy-button">Compra ahora</a>
-            </div>
-        </div>
-        <div style="text-align: center; margin-top: 30px;">
-            <a href="https://www.instagram.com/a.naca.roli.na?igsh=MXRleHRmamNiam5vcg%3D%3D&utm_source=qr " target="_blank" class="instagram-button">
-                <i class="fab fa-instagram"></i> ¡Sígueme en Instagram!
-            </a>
-        </div>
-    </section>
-
-    <!-- Sección Bookstagrammer -->
-<section id="Bookstagrammer">
+  <header>
+    <div class="header-pattern"></div>
+    <h1>Bienvenidos a mi mundo literario</h1>
+  </header>
+  <img src="imagenes/separador.png" alt="Separador decorativo" class="separator">
+  <section>
+    <h2>Mis Libros</h2>
+    <div class="book-container">
+      <div class="book">
+        <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
+        <img src="imagenes/portada1.jpg" alt="Portada del libro '¿Y si no, nos hubiéramos conocido por casualidad?'" class="book-cover">
+        <p class="book-description">
+          Vicky deja atrás su hogar para mudarse a Madrid con su mejor amiga, con el sueño de estudiar fotografía. Sin embargo, sus planes de convertirse en una fotógrafa de éxito no salen como siempre había imaginado...
+        </p>
+        <a href="https://www.amazon.es/nos-hubiéramos-conocido-por-casualidad/dp/B0DK9RJF91" target="_blank" class="buy-button">Compra ahora</a>
+      </div>
+      <div class="book">
+        <h3>¿Y si volviéramos a vernos por casualidad?</h3>
+        <img src="imagenes/portada2.jpg" alt="Portada del libro '¿Y si volviéramos a vernos por casualidad?'" class="book-cover">
+        <p class="book-description">
+          Vicky nunca imaginó que construiría una vida con Tae y Aera a su lado, casi perfecta, cercana a lo que muchos consideran una familia modelo, en Corea del Sur...
+        </p>
+        <a href="https://www.amazon.es/volviéramos-Casualidad-hubiéramos-conocido-casualidad/dp/B0DTGB4S33" target="_blank" class="buy-button">Compra ahora</a>
+      </div>
+    </div>
+    <div style="text-align: center; margin-top: 30px;">
+      <a href="https://www.instagram.com/a.naca.roli.na?igsh=MXRleHRmamNiam5vcg%3D%3D&utm_source=qr" target="_blank" class="instagram-button">
+        <i class="fab fa-instagram"></i> ¡Sígueme en Instagram!
+      </a>
+    </div>
+  </section>
+  
+  <!-- Sección Bookstagrammer -->
+  <section id="Bookstagrammer">
     <h2>Bookstagrammer</h2>
-    <div class="Bookstagrammer-container">
-        <!-- Colaborador 1 -->
-        <div class="booksgramer">
-            <img src="imagenes/enerojs.jpg" alt="Foto de perfil de Booksgramer 1">
-            <a href="https://www.instagram.com/enero.gs/" target="_blank" class="instagram-button">
-                <i class="fab fa-instagram"></i> <!-- Icono de Instagram -->
-            </a>
-        </div>
-        <!-- Colaborador 2 -->
-        <div class="booksgramer">
-            <img src="imagenes/panditalectora.jpg" alt="Foto de perfil de Booksgramer 2">
-            <a href="https://www.instagram.com/pandita.lectora" target="_blank" class="instagram-button">
-                <i class="fab fa-instagram"></i> <!-- Icono de Instagram -->
-            </a>
-        </div>
-        <!-- Colaborador 3 -->
-        <div class="booksgramer">
-            <img src="imagenes/pame.jpg" alt="Foto de perfil de Booksgramer 3">
-            <a href="https://www.instagram.com/fpamelagarcia" target="_blank" class="instagram-button">
-                <i class="fab fa-instagram"></i> <!-- Icono de Instagram -->
-            </a>
-        </div>
-        <!-- Colaborador 4 -->
-        <div class="booksgramer">
-            <img src="imagenes/isacat7.jpg" alt="Foto de perfil de Booksgramer 4">
-            <a href="https://www.instagram.com/isacat7" target="_blank" class="instagram-button">
-                <i class="fab fa-instagram"></i> <!-- Icono de Instagram -->
-            </a>
-        </div>
-        <!-- Puedes añadir más colaboradores aquí -->
+    <!-- Botón para mostrar/ocultar la lista -->
+    <button id="toggleBookstagrammers" class="instagram-button">
+      <i class="fab fa-instagram"></i>
+    </button>
+    <!-- Lista de colaboradores, inicialmente oculta -->
+    <div id="bookstagrammerList" class="Bookstagrammer-container" style="display: none;">
+      <!-- Colaborador 1 -->
+      <div class="booksgramer">
+        <img src="imagenes/enerojs.jpg" alt="Foto de perfil de Booksgramer 1">
+        <a href="https://www.instagram.com/enero.gs/" target="_blank" class="instagram-button">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <!-- Colaborador 2 -->
+      <div class="booksgramer">
+        <img src="imagenes/panditalectora.jpg" alt="Foto de perfil de Booksgramer 2">
+        <a href="https://www.instagram.com/pandita.lectora" target="_blank" class="instagram-button">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <!-- Colaborador 3 -->
+      <div class="booksgramer">
+        <img src="imagenes/pame.jpg" alt="Foto de perfil de Booksgramer 3">
+        <a href="https://www.instagram.com/fpamelagarcia" target="_blank" class="instagram-button">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <!-- Colaborador 4 -->
+      <div class="booksgramer">
+        <img src="imagenes/isacat7.jpg" alt="Foto de perfil de Booksgramer 4">
+        <a href="https://www.instagram.com/isacat7" target="_blank" class="instagram-button">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
     </div>
-</section>
-    </div>
-</section>
+  </section>
+  
+  <!-- Botón circular con la foto de la autora en la esquina inferior izquierda -->
+  <button id="bioButton" class="bio-button">
+    <img src="imagenes/biografia.jpg" alt="Foto de la autora">
+  </button>
+  
+  <!-- Sección de biografía (desplegable con animación) -->
+  <div id="bioContent" class="bio-content">
+    <img src="imagenes/ana-carolina.jpg" alt="Foto de la autora" class="bio-photo">
+    <h2>Biografía</h2>
+    <p>
+      Ana Carolina, creo que ahora soy del mundo... De cualquier lugar. 
+
+Llegué a España hace unos cuantos años, mi obligación de aprender castellano por estudios se convirtió en leer muchos libros, demasiados. Y es una de mis pasiones, después de BTS claramente... seguido de una mala leche tremenda, y ser creo que... un poco malhablada. Algunas veces ni siquiera se en que idioma hablo. Mientras se me entienda... 
+    </p>
+    <button id="closeBio" class="close-button">Cerrar</button>
+  </div>
+  
+  <script>
+    // Mostrar/ocultar lista de Bookstagrammers
+    document.getElementById('toggleBookstagrammers').addEventListener('click', function() {
+      var list = document.getElementById('bookstagrammerList');
+      if (list.style.display === 'none' || list.style.display === '') {
+        list.style.display = 'flex';
+      } else {
+        list.style.display = 'none';
+      }
+    });
+    
+    // Alternar visibilidad de la biografía con animación
+    document.getElementById('bioButton').addEventListener('click', function() {
+      var bioContent = document.getElementById('bioContent');
+      bioContent.classList.toggle('show');
+    });
+    
+    // Botón para cerrar la biografía
+    document.getElementById('closeBio').addEventListener('click', function() {
+      document.getElementById('bioContent').classList.remove('show');
+    });
+  </script>
 </body>
 </html>
