--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
   <section>
     <h2>Mis Libros</h2>
     <div class="book-container">
+     <div class="book">
+        <h3>YO ANTES Y DESPÚES DE TI</h3>
+        <img src="imagenes/portada3.jpg" alt="Portada del libro 'YO ANTES Y DESPUES DE TI'" class="book-cover">
+        <p class="book-description">
+          Valkiria está rota.Ya no es la misma de antes, aunque a ojos de los demás se pone una máscara para esconder sus cicatrices detrás de tatuajes y tulipanes. Pero Gabriel, el escort de lujo del que se ha enganchado hasta llevarla casi a la ruina, sí las ve, y a base de sexo e intensas charlas intentará arreglarla...
+Ninguno de los dos estaban preparados para la vuelta de Felipe a España después de ocho años en Estados Unidos y todo lo que va a remover su llegada.
+Un corazón roto. 
+Un ángel sin alas. 
+Un error del pasado que lo cambia todo.
+        </p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScsFqoulsObZqjD0plvEA-wc_W26ZgPQnn_3Py0MqUXMHXwVA/viewform?usp=header" target="_blank" class="buy-button">PREVENTA</a>
+      </div>
       <div class="book">
         <h3>¿Y si no, nos hubiéramos conocido por casualidad?</h3>
         <img src="imagenes/portada1.jpg" alt="Portada del libro '¿Y si no, nos hubiéramos conocido por casualidad?'" class="book-cover">
@@ -138,3 +150,4 @@ Llegué a España hace unos cuantos años, mi obligación de aprender castellano
   </script>
 </body>
 </html>
+
